Bug 1000712 - Fix -Wunused-variable warnings in js. r=jonco